# fractal_viewer

./: .gitignore  CMakeLists.txt  README.md
resources/info/: type0.txt
src/: MultiLineLabel.h  buttonShader.vs  camera.h  fractal_utils.h  main.cpp  mandelbrot.fs  mandelbrot.vs  shader.fs  shader.vs
